# fermionic-mbody

./: .coverage  .gitignore  README  pyproject.toml  requirements.txt  test.ipynb
fermionic_mbody/: __init__.py  _ofsparse.py  _parallel.py  basis.py  rho.py
fermionic_mbody/datasets/: __init__.py  h2o.py
tests/: conftest.py  helpers.py  test_00_normalisation.py  test_01_hermiticity.py  test_02_projectors.py  test_03_slater.py  test_04_pair_condensate.py  test_05_pairs_kkbar.py  test_06_implementations.py  test_07_physical_identities.py  test_08_pairing_isomorphism.py
